# post-build-postgres

./: Cargo.toml  README.md  default.nix  flake.nix  module.nix
.github/workflows/: ci.yml
src/: ec2.rs  journal.rs  lib.rs  schema.sql  structs.rs
